--- a/Tower Defense Project/Tower_Defense_Project/Tower_Defense_Project.csproj
+++ b/Tower Defense Project/Tower_Defense_Project/Tower_Defense_Project.csproj
@@ -117,6 +117,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main.cs" />
